@@ -2,7 +2,8 @@ Pending changes in the mainline
 ===============================
 
 Maintenance:
-* Fix memory leaks when a python script calls orthanc.RestApiPost() and sibling methods
+* Fix memory leaks when a python script calls orthanc.RestApiPost() and sibling methods,
+  in IncomingHttpRequestFilter and in the CMove callback.
 * New builders for Windows: Supporting 32 / 64bit with Python 3.9 / 3.10 / 3.11
 
 
